--- a/src/components/Navbar/Navbar.scss
+++ b/src/components/Navbar/Navbar.scss
@@ -36,7 +36,7 @@
     .center-nav {
         position: absolute;
         left: 50%;
-        transform: translate(-50%, 18px);
+        transform: translate(-50%, 17px);
         display: flex;
         align-items: center;
     }
@@ -44,7 +44,51 @@
         margin-left: auto;
         display: flex;
         align-items: center;
+        margin-right: 60px;
     }
+    
 
     
+}
+.hamburger {
+    cursor: pointer;
+    position: absolute;
+    top: 18px;
+    right: 10px;
+    z-index: 10;
+    
+    display: flex;
+    flex-direction: column;
+    margin-right: 30px;
+    margin-top: 3px;
+
+    .line {
+        width: 18px;
+        height: 2px;
+        margin-bottom: 2.5px;
+        background-color: black;
+        transition: all 0.2s ease-in;
+    }
+
+    &.open {
+        position: absolute;
+        top: 18px;
+        right: 10px;
+        z-index: 10;
+        .first-line {
+            width: 14.14px;
+            transform: rotate(45deg) translate(0px, -2px);
+            transform-origin: 0% 0%;
+            transition: transform 0.2s ease-in;
+        }
+        .second-line {
+            transform: scale(0);
+        }
+        .third-line {
+            width: 14.14px;
+            transform: rotate(-45deg);
+            transform-origin: -10% 0%;
+            transition: transform 0.2s ease-in;
+        }
+    }
 }
